--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/DemoShowroom.loader.js";
       var config = {
-        dataUrl: buildUrl + "/DemoShowroom.data.gz",
-        frameworkUrl: buildUrl + "/DemoShowroom.framework.js.gz",
-        codeUrl: buildUrl + "/DemoShowroom.wasm.gz",
+        dataUrl: buildUrl + "/DemoShowroom.data.br",
+        frameworkUrl: buildUrl + "/DemoShowroom.framework.js.br",
+        codeUrl: buildUrl + "/DemoShowroom.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "DemoShowRoom",
